fix issue with word wrapping

--- a/src/webparts/QnA/components/QnAForm/QnAForm.module.scss
+++ b/src/webparts/QnA/components/QnAForm/QnAForm.module.scss
@@ -16,6 +16,12 @@
 //     position: absolute;
 //   }
  }
+
+
+ .rt-td {
+  white-space: normal !important;
+  overflow-wrap: break-word !important;
+}
   .questionInput{
     word-wrap: break-word;
     overflow-wrap: break-word;
